# centrifuge-rs

./: .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  SDK_COMPLIANCE.md  TEST_ANALYSIS.md  build.rs  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
additionals/: client_protocol.md  client_sdk.md
examples/: basic.rs  token_auth.rs
src/: backoff.rs  client.rs  codec.rs  codes.rs  config.rs  delta.rs  errors.rs  events.rs  lib.rs  protocol.rs  subscription.rs  transport.rs
src/client/: actor.rs  commands.rs  connect.rs  mod.rs  push.rs  server_subs.rs  state.rs  subscriptions.rs  token.rs  transport_io.rs
tests/: actor_commands.rs  actor_connection.rs  actor_server_subs.rs  actor_state.rs  actor_subscriptions.rs  actor_tests.rs  actor_token.rs  integration_advanced_test.rs  integration_test.rs
tests/actor_helpers/: mod.rs
tests/common/: mod.rs
