[package]
name = "centrifuge"
version = "0.1.0"
edition = "2024"
description = "Rust client SDK for the Centrifuge real-time messaging protocol"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
url = "2"
rand = "0.8"
tracing = "0.1"
futures-util = { version = "0.3", features = ["sink"] }

[build-dependencies]
prost-build = "0.13"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "token_auth"
path = "examples/token_auth.rs"
