[package]
name = "centrifuge-client"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Rust client SDK for the Centrifuge real-time messaging protocol"
readme = "README.md"
repository = "https://github.com/pscheid92/centrifuge-rs"
keywords = ["centrifuge", "centrifugo", "websocket", "realtime", "pubsub"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
exclude = [
    "existing-clients/",
    "docs/",
    "openspec/",
    ".claude/",
    ".idea/",
    "docker-compose.yml",
    "REVIEW.md",
    "REVIEW_CHECKLIST.md",
    "API_COMPARISON.md",
]

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# WebSocket
tokio-tungstenite = "0.29"

# Protocol encoding
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Utilities
thiserror = "2"
tracing = "0.1"
rand = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
testcontainers = "0.27"

[build-dependencies]
prost-build = "0.14"

[package.metadata.docs.rs]
features = ["native-tls"]
